# CashMate

./: .gitignore  README.md  __init__.py  prompt.py  pyproject.toml  test_email.py
ChatMate/: README.md  pyproject.toml
ChatMate/src/config/: config.yaml  model_config.yaml
src/: __init__.py  call_llm.py  chatmate_transactions.db  process_email.py  prompt.py
src/config/: config.yaml
