[project]
name = "chatmate"
version = "0.1.0"
description = "project to access weekly transactions as they appear in my gmail inbox"
authors = [
    {name = "Leila Wolfe, leilanoellewolfe@gmail.com"}
]
readme = "README.md"
requires-python = ">3.10"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "google-api-python-client (>=2.187.0,<3.0.0)",
    "google-auth-oauthlib (>=1.2.3,<2.0.0)",
    "google-auth-httplib2 (>=0.2.1,<0.3.0)",
    "google-genai (>=1.51.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "reportlab (>=4.4.5,<5.0.0)",
    "email (>=4.0.2,<5.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "spacy (>=3.8.11,<4.0.0)",
    "beautifulsoup (>=3.2.2,<4.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "ruff (>=0.14.5,<0.15.0)",
    "pylint (>=4.0.3,<5.0.0)",
    "dask (>=2025.11.0,<2026.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "dash (>=3.3.0,<4.0.0)",
    "langchain (>=1.0.7,<2.0.0)",
    "pytest (>=9.0.1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
